# HookSample

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hacker.c  native-lib.cpp
app/src/main/java/com/bytedance/android/bytehook/sample/: NativeHacker.kt
app/src/main/java/com/classic/hooksample/: GApplication.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
